Preserve ordering for relationships